[gd_scene load_steps=2 format=3 uid="uid://dqaq0b8snof1q"]

[ext_resource type="Script" path="res://src/main/panels/setting_panel/line_setting.gd" id="1_0rapb"]

[node name="LineSetting" type="MarginContainer"]
offset_right = 216.0
offset_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("1_0rapb")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Color"

[node name="LineColor" type="ColorPickerButton" parent="GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
focus_mode = 0

[node name="Label2" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Width"

[node name="LineWidth" type="SpinBox" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 500.0
value = 1.0

[connection signal="color_changed" from="GridContainer/LineColor" to="." method="_on_color_color_changed"]
[connection signal="value_changed" from="GridContainer/LineWidth" to="." method="_on_width_value_changed"]
